Qms login properties (#10)
* Refactor QMS URL handling in LoginWindow and update classpath for launcher

* bump version from 6.1.20-SIKLU to 6.1.21-SIKLU across multiple modules